dhall/tests/type-inference/failure/unit/MergeRhsNotUnion.txt
Type error: error: Merge2ArgMustBeUnionOrOptional
 --> <current file>:1:0
  |
1 | merge {=} True
  | ^^^^^^^^^^^^^^ Merge2ArgMustBeUnionOrOptional
  |
